// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PetOwnerFieldsView > renders Empty 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="m_4081bf90 mantine-Group-root"
      data-grow="true"
      style="--group-child-width: calc(50% - (var(--mantine-spacing-md) - var(--mantine-spacing-md) / 2)); --group-gap: var(--mantine-spacing-md); --group-align: start; --group-justify: flex-start; --group-wrap: wrap;"
    >
      <div
        class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
      >
        <label
          class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
          for="mantine-0cyk5rcyk"
          id="mantine-0cyk5rcyk-label"
        >
          First Name
        </label>
        <div
          class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
          data-variant="default"
        >
          <input
            aria-invalid="false"
            autocapitalize="words"
            class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
            data-variant="default"
            id="mantine-0cyk5rcyk"
            name="$.firstName"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
      >
        <label
          class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
          for="mantine-0px4bipx4"
          id="mantine-0px4bipx4-label"
        >
          Surname
        </label>
        <div
          class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
          data-variant="default"
        >
          <input
            aria-invalid="false"
            autocapitalize="words"
            class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
            data-variant="default"
            id="mantine-0px4bipx4"
            name="$.surname"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
        data-required="true"
        for="mantine-12voha2vo"
        id="mantine-12voha2vo-label"
      >
        Phone number
        <span
          aria-hidden="true"
          class="m_78a94662 mantine-InputWrapper-required mantine-TextInput-required"
        >
           *
        </span>
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
        data-variant="default"
        data-with-right-section="true"
      >
        <input
          aria-invalid="false"
          class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
          data-variant="default"
          id="mantine-12voha2vo"
          name="$.phoneNumber"
          placeholder="04xxxxxxxx"
          required=""
          type="tel"
          value=""
        />
        <div
          class="m_82577fc2 mantine-Input-section mantine-TextInput-section"
          data-position="right"
        >
          <button
            class="mantine-focus-auto mantine-active m_220c80f2 m_86a44da5 mantine-CloseButton-root m_87cf2631 mantine-UnstyledButton-root"
            data-variant="subtle"
            type="button"
          >
            <svg
              fill="none"
              viewBox="0 0 15 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
        for="mantine-1fu8n1fu8"
        id="mantine-1fu8n1fu8-label"
      >
        Email
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
        data-variant="default"
      >
        <input
          aria-invalid="false"
          class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
          data-variant="default"
          id="mantine-1fu8n1fu8"
          name="$.email"
          placeholder="me@somewhere.org"
          type="email"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PetOwnerFieldsView > renders Errors 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="m_4081bf90 mantine-Group-root"
      data-grow="true"
      style="--group-child-width: calc(50% - (var(--mantine-spacing-md) - var(--mantine-spacing-md) / 2)); --group-gap: var(--mantine-spacing-md); --group-align: start; --group-justify: flex-start; --group-wrap: wrap;"
    >
      <div
        class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
        data-error="true"
      >
        <label
          class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
          for="mantine-0cyk5rcyk"
          id="mantine-0cyk5rcyk-label"
        >
          First Name
        </label>
        <div
          class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
          data-error="true"
          data-variant="default"
          style="--input-margin-bottom: calc(var(--mantine-spacing-xs) / 2);"
        >
          <input
            aria-describedby="mantine-0cyk5rcyk-error"
            aria-invalid="true"
            autocapitalize="words"
            class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
            data-error="true"
            data-variant="default"
            id="mantine-0cyk5rcyk"
            name="$.firstName"
            type="text"
            value="Bob"
          />
        </div>
        <p
          class="m_8f816625 mantine-InputWrapper-error mantine-TextInput-error"
          id="mantine-0cyk5rcyk-error"
        >
          First name must be at least 3 characters long
        </p>
      </div>
      <div
        class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
        data-error="true"
      >
        <label
          class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
          for="mantine-0px4bipx4"
          id="mantine-0px4bipx4-label"
        >
          Surname
        </label>
        <div
          class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
          data-error="true"
          data-variant="default"
          style="--input-margin-bottom: calc(var(--mantine-spacing-xs) / 2);"
        >
          <input
            aria-describedby="mantine-0px4bipx4-error"
            aria-invalid="true"
            autocapitalize="words"
            class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
            data-error="true"
            data-variant="default"
            id="mantine-0px4bipx4"
            name="$.surname"
            type="text"
            value="Jane"
          />
        </div>
        <p
          class="m_8f816625 mantine-InputWrapper-error mantine-TextInput-error"
          id="mantine-0px4bipx4-error"
        >
          Surname must be at least 3 characters long
        </p>
      </div>
    </div>
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
      data-error="true"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
        data-required="true"
        for="mantine-12voha2vo"
        id="mantine-12voha2vo-label"
      >
        Phone number
        <span
          aria-hidden="true"
          class="m_78a94662 mantine-InputWrapper-required mantine-TextInput-required"
        >
           *
        </span>
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
        data-error="true"
        data-variant="default"
        data-with-right-section="true"
        style="--input-margin-bottom: calc(var(--mantine-spacing-xs) / 2);"
      >
        <input
          aria-describedby="mantine-12voha2vo-error"
          aria-invalid="true"
          class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
          data-error="true"
          data-variant="default"
          id="mantine-12voha2vo"
          name="$.phoneNumber"
          placeholder="04xxxxxxxx"
          required=""
          type="tel"
          value="005000500"
        />
        <div
          class="m_82577fc2 mantine-Input-section mantine-TextInput-section"
          data-position="right"
        >
          <button
            class="mantine-focus-auto mantine-active m_220c80f2 m_86a44da5 mantine-CloseButton-root m_87cf2631 mantine-UnstyledButton-root"
            data-variant="subtle"
            type="button"
          >
            <svg
              fill="none"
              viewBox="0 0 15 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <p
        class="m_8f816625 mantine-InputWrapper-error mantine-TextInput-error"
        id="mantine-12voha2vo-error"
      >
        Must be a valid phone number
      </p>
    </div>
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
      data-error="true"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
        for="mantine-1fu8n1fu8"
        id="mantine-1fu8n1fu8-label"
      >
        Email
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
        data-error="true"
        data-variant="default"
        style="--input-margin-bottom: calc(var(--mantine-spacing-xs) / 2);"
      >
        <input
          aria-describedby="mantine-1fu8n1fu8-error"
          aria-invalid="true"
          class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
          data-error="true"
          data-variant="default"
          id="mantine-1fu8n1fu8"
          name="$.email"
          placeholder="me@somewhere.org"
          type="email"
          value="email@e.mail"
        />
      </div>
      <p
        class="m_8f816625 mantine-InputWrapper-error mantine-TextInput-error"
        id="mantine-1fu8n1fu8-error"
      >
        Must be a valid email
      </p>
    </div>
  </div>
</div>
`;

exports[`PetOwnerFieldsView > renders Populated 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="m_4081bf90 mantine-Group-root"
      data-grow="true"
      style="--group-child-width: calc(50% - (var(--mantine-spacing-md) - var(--mantine-spacing-md) / 2)); --group-gap: var(--mantine-spacing-md); --group-align: start; --group-justify: flex-start; --group-wrap: wrap;"
    >
      <div
        class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
      >
        <label
          class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
          for="mantine-0px4bipx4"
          id="mantine-0px4bipx4-label"
        >
          First Name
        </label>
        <div
          class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
          data-variant="default"
        >
          <input
            aria-invalid="false"
            autocapitalize="words"
            class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
            data-variant="default"
            id="mantine-0px4bipx4"
            name="$.firstName"
            type="text"
            value="Bob"
          />
        </div>
      </div>
      <div
        class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
      >
        <label
          class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
          for="mantine-12voha2vo"
          id="mantine-12voha2vo-label"
        >
          Surname
        </label>
        <div
          class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
          data-variant="default"
        >
          <input
            aria-invalid="false"
            autocapitalize="words"
            class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
            data-variant="default"
            id="mantine-12voha2vo"
            name="$.surname"
            type="text"
            value="Jane"
          />
        </div>
      </div>
    </div>
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
        data-required="true"
        for="mantine-1fu8n1fu8"
        id="mantine-1fu8n1fu8-label"
      >
        Phone number
        <span
          aria-hidden="true"
          class="m_78a94662 mantine-InputWrapper-required mantine-TextInput-required"
        >
           *
        </span>
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
        data-variant="default"
        data-with-right-section="true"
      >
        <input
          aria-invalid="false"
          class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
          data-variant="default"
          id="mantine-1fu8n1fu8"
          name="$.phoneNumber"
          placeholder="04xxxxxxxx"
          required=""
          type="tel"
          value="005000500"
        />
        <div
          class="m_82577fc2 mantine-Input-section mantine-TextInput-section"
          data-position="right"
        >
          <button
            class="mantine-focus-auto mantine-active m_220c80f2 m_86a44da5 mantine-CloseButton-root m_87cf2631 mantine-UnstyledButton-root"
            data-variant="subtle"
            type="button"
          >
            <svg
              fill="none"
              viewBox="0 0 15 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
        for="mantine-1ssssssss"
        id="mantine-1ssssssss-label"
      >
        Email
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
        data-variant="default"
      >
        <input
          aria-invalid="false"
          class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
          data-variant="default"
          id="mantine-1ssssssss"
          name="$.email"
          placeholder="me@somewhere.org"
          type="email"
          value="email@e.mail"
        />
      </div>
    </div>
  </div>
</div>
`;
